# JucePlugins

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Modules/: CMakeLists.txt
Modules/shared_modules/: CMakeLists.txt  shared_modules.cpp  shared_modules.h
Modules/shared_modules/Source/: OnePoleFilter.cpp  OnePoleFilter.h  ProcessorModulator.cpp  ProcessorModulator.h  VariableDelayAllpass.cpp  VariableDelayAllpass.h  VariableDelayLine.cpp  VariableDelayLine.h
Tests/: CMakeLists.txt  OnePoleFilterTests.cpp  TestHelpers.cpp  TestHelpers.h  VariableDelayAllpassTests.cpp  VariableDelayLineTests.cpp
